--- a/.github/workflows/helm.yaml
+++ b/.github/workflows/helm.yaml
@@ -19,3 +19,5 @@ jobs:
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.0.0-rc.1
+        env:
+          CR_TOKEN: "${{ secrets.CR_TOKEN }}"
