--- a/charts/h2-database/Chart.yaml
+++ b/charts/h2-database/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-appVersion: '1.0'
-description: A Helm chart for Kubernetes
+appVersion: '1.4.199'
+description: A helm chart to deploy h2-database
 name: h2-database
 version: 1.0.0
