--- a/charts/h2-database/Chart.yaml
+++ b/charts/h2-database/Chart.yaml
@@ -2,4 +2,6 @@ apiVersion: v1
 appVersion: '1.4.199'
 description: A helm chart to deploy h2-database
 name: h2-database
-version: 1.0.1
+version: 1.0.2
+maintainers:
+  - name: audig
