--- a/charts/h2-database/values.yaml
+++ b/charts/h2-database/values.yaml
@@ -6,10 +6,13 @@ replicaCount: 1
 
 image:
   repository:  oscarfonts/h2
-  tag: 1.4.199
+  tag: alpine
   pullPolicy: Always
 
 env:
+  H2_OPTIONS: "-ifNotExists"
+
+extraArgs:
 
 service:
   type: ClusterIP
