--- a/charts/spring-boot/templates/horizontal-pod-autoscaler.yaml
+++ b/charts/spring-boot/templates/horizontal-pod-autoscaler.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.hpa.enabled -}}
+{{- if .Values.hpa.enabled }}
 apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
@@ -21,3 +21,4 @@ spec:
       resource:
         name: memory
         targetAverageUtilization: {{ .Values.hpa.memoryMax }}
+  {{- end }}
