--- a/charts/spring-boot/values.yaml
+++ b/charts/spring-boot/values.yaml
@@ -67,13 +67,13 @@ resources: {}
 
 ## uncomment and modify the following livenessProbe and readinessProbe.
 ## These defaults should work with anything that uses the spring health actuator.
-# livenessProbe:
+livenessProbe: {}
 #   httpGet:
 #     path: /actuator/health
 #     port: http
 #   initialDelaySeconds: 300
 #   periodSeconds: 10
-# readinessProbe:
+readinessProbe: {}
 #   httpGet:
 #     path: /actuator/health
 #     port: http
@@ -87,13 +87,11 @@ tolerations: []
 affinity: {}
 
 
-hpa:
-  enabled: false
-  minReplicas: 2
-  maxReplicas: 4
-  cpuMax: 80
-  memoryMax: 70
+hpa: {}
+#  minReplicas: 2
+#  maxReplicas: 4
+#  cpuMax: 80
+#  memoryMax: 70
 
-podDisruptionBudget:
-  enabled: false
-  minAvailable: 1
+podDisruptionBudget: {}
+#  minAvailable: 1
