--- a/charts/spring-boot/templates/deployment.yaml
+++ b/charts/spring-boot/templates/deployment.yaml
@@ -26,14 +26,12 @@ spec:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          {{- if or .Values.extraEnv .Values.secretsEnv}}
           env:
-            {{- if .Values.extraEnv }}
             {{- range $key, $value := .Values.extraEnv }}
             - name: {{ $key }}
               value: {{ $value | quote }}
             {{- end }}
-            {{- end}}
-            {{- if .Values.secretsEnv}}
             {{- range .Values.secretsEnv }}
             {{- $secretName := .secretName }}
             {{- range $key, $value :=  .env }}
