Fix indent for include labels
Signed-off-by: Guillaume Audic <audic.gui@gmail.com>

--- a/charts/spring-boot/templates/deployment.yaml
+++ b/charts/spring-boot/templates/deployment.yaml
@@ -32,7 +32,7 @@ spec:
             - name: {{ $key }}
               value: {{ $value | quote }}
             {{- end }}
-            {{- range .Values.secretsEnv }}
+            {{- range .Values.secretEnv }}
             {{- $secretName := .secretName }}
             {{- range $key, $value :=  .env }}
             - name: {{ $key }}
