Fix indent for include labels
Signed-off-by: Guillaume Audic <audic.gui@gmail.com>

--- a/charts/spring-boot/templates/deployment.yaml
+++ b/charts/spring-boot/templates/deployment.yaml
@@ -32,6 +32,7 @@ spec:
             - name: {{ $key }}
               value: {{ $value | quote }}
             {{- end }}
+            {{- if .Values.secretEnv }}
             {{- range .Values.secretEnv }}
             {{- $secretName := .secretName }}
             {{- range $key, $value :=  .env }}
@@ -40,6 +41,7 @@ spec:
                 secretKeyRef:
                   name: {{ $secretName }}
                   key: {{ $value }}
+          {{- end }}
           {{- end }}
           {{- end }}
           {{- end }}
