Update image to get a working demo
Signed-off-by: Guillaume Audic <audic.gui@gmail.com>

--- a/charts/spring-boot/values.yaml
+++ b/charts/spring-boot/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: stevenacoffman/prometheus-spring-actuator
+  repository: springguides/demo
   tag: latest
   pullPolicy: IfNotPresent
 
