--- a/charts/spring-boot/templates/tests/test-connection.yaml
+++ b/charts/spring-boot/templates/tests/test-connection.yaml
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args:  ['{{ include "spring-boot.fullname" . }}:{{ .Values.service.port }}']
+      args:  ['{{ include "spring-boot.fullname" . }}:{{ .Values.service.port }}/actuator/health']
   restartPolicy: Never
