--- a/charts/gantt/Chart.yaml
+++ b/charts/gantt/Chart.yaml
@@ -2,4 +2,5 @@ apiVersion: v1
 appVersion: "1.0.2"
 description: A Helm chart for Kubernetes
 name: gantt
+home: https://github.com/cnieg/gantt
 version: 1.0.0
