--- a/charts/gantt/Chart.yaml
+++ b/charts/gantt/Chart.yaml
@@ -1,6 +1,9 @@
 apiVersion: v1
 appVersion: "1.0.2"
-description: A Helm chart for Kubernetes
+description: Web app to make gantt diagrams
 name: gantt
 home: https://github.com/cnieg/gantt
 version: 1.0.0
+maintainers:
+  - name: Thomah
+    email: thomas.hingant@cnieg.fr
