[gantt] Add delay before probing
Signed-off-by: Thomah <5090230+Thomah@users.noreply.github.com>

--- a/charts/gantt/templates/deployment.yaml
+++ b/charts/gantt/templates/deployment.yaml
@@ -32,10 +32,12 @@ spec:
             httpGet:
               path: /
               port: http
+            initialDelaySeconds: 10
           readinessProbe:
             httpGet:
               path: /
               port: http
+            initialDelaySeconds: 10
           volumeMounts:
             - name : data
               mountPath :  /opt/apps/gantt/fichier
