Update endpoint status
Signed-off-by: Guillaume Audic <audic.gui@gmail.com>

--- a/charts/proxy-relay/templates/tests/test-connection.yaml
+++ b/charts/proxy-relay/templates/tests/test-connection.yaml
@@ -14,5 +14,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args:  ['{{ include "proxy-relay.fullname" . }}:{{ .Values.service.port }}/server/status']
+      args:  ['{{ include "proxy-relay.fullname" . }}:{{ .Values.service.port }}/server-status']
   restartPolicy: Never
