--- a/charts/proxy-relay/templates/configmap.yaml
+++ b/charts/proxy-relay/templates/configmap.yaml
@@ -50,6 +50,7 @@ data:
     LoadModule autoindex_module modules/mod_autoindex.so
     LoadModule dir_module modules/mod_dir.so
     LoadModule alias_module modules/mod_alias.so
+    LoadModule ssl_module modules/mod_ssl.so
 
     <IfModule unixd_module>
       User daemon
@@ -130,6 +131,8 @@ data:
 
       ProxyRequests Off
       ProxyVia Off
+
+      SSLProxyEngine on
 
       ProxyPass /server-status !
       {{- if .Values.proxyUrl }}
