--- a/charts/proxy-relay/templates/deployment.yaml
+++ b/charts/proxy-relay/templates/deployment.yaml
@@ -15,6 +15,8 @@ spec:
       labels:
         app: {{ template "proxy-relay.name" . }}
         release: {{ .Release.Name }}
+      annotations:
+        checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
     spec:
       volumes:
         - name: config
