--- a/charts/proxy-relay/templates/tests/test-connection.yaml
+++ b/charts/proxy-relay/templates/tests/test-connection.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: {{ template "proxy-relay.fullname" . }}
+  name: "{{ template "proxy-relay.fullname" . }}-test-connection"
   labels:
     app: {{ template "proxy-relay.name" . }}
     chart: {{ template "proxy-relay.chart" . }}
@@ -14,5 +14,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args:  ['{{ include "proxy-relay.fullname" . }}:{{ .Values.service.port }}/server-status']
+      args:  ['http://{{ include "proxy-relay.fullname" . }}:{{ .Values.service.port }}']
   restartPolicy: Never
