--- a/charts/h2-database/values.yaml
+++ b/charts/h2-database/values.yaml
@@ -20,12 +20,18 @@ service:
   portUi: 81
 
 ingress:
-  enabled: false
-  # host: h2-database.mydomain.fr
-  annotations:
-    traefik.ingress.kubernetes.io/redirect-entry-point: https
-    traefik.ingress.kubernetes.io/redirect-permanent: "true"
-  path: /
+  enabled: true
+  annotations: {}
+  # kubernetes.io/ingress.class: nginx
+  # kubernetes.io/tls-acme: "true"
+  hosts:
+    - host: chart-example.local
+      paths: []
+
+  tls: []
+  #  - secretName: chart-example-tls
+  #    hosts:
+  #      - chart-example.local
 
 readinessProbe:
   periodSeconds: 10
