--- a/charts/h2-database/values.yaml
+++ b/charts/h2-database/values.yaml
@@ -20,7 +20,7 @@ service:
   portUi: 81
 
 ingress:
-  enabled: true
+  enabled: false
   annotations: {}
   # kubernetes.io/ingress.class: nginx
   # kubernetes.io/tls-acme: "true"
