Add remoteUrl for ci & ingress enabled
Signed-off-by: Guillaume Audic <audic.gui@gmail.com>

--- a/charts/proxy-relay/values.yaml
+++ b/charts/proxy-relay/values.yaml
@@ -30,7 +30,7 @@ ingress:
   #    hosts:
   #      - chart-example.local
 
-remoteUrl: "https://github.com/"
+remoteUrl: {}
 
 # If you have a proxy you can set it here
 # proxyUrl: http://137.74.35.119:8080
