--- a/charts/proxy-relay/values.yaml
+++ b/charts/proxy-relay/values.yaml
@@ -33,7 +33,7 @@ ingress:
 remoteUrl: {}
 
 # If you have a proxy you can set it here
-# proxyUrl: http://137.74.35.119:8080
+# proxyUrl: http://myproxycompany:8080
 proxyUrl: {}
 
 extraEnv: {}
