--- a/charts/proxy-relay/Chart.yaml
+++ b/charts/proxy-relay/Chart.yaml
@@ -4,5 +4,9 @@ description: A Helm chart to proxy request to another url with company proxy or 
 name: proxy-relay
 home: https://httpd.apache.org/docs/2.4/fr/programs/httpd.html
 version: 1.0.0
+sources:
+  - https://github.com/cnieg/helm-charts/tree/master/charts/proxy-relay
+  - https://cnieg.github.io/helm-charts
 maintainers:
   - name: audig
+
