--- a/charts/pulsar/Chart.yaml
+++ b/charts/pulsar/Chart.yaml
@@ -2,9 +2,11 @@ apiVersion: v1
 appVersion: '2.51'
 description: Apache Pulsar Helm chart for Kubernetes
 name: pulsar
+version: 1.0.0
 home: http://pulsar.apache.org/en/
 sources:
   - https://github.com/apache/pulsar/tree/master/deployment/kubernetes/helm
   - http://pulsar.apache.org/docs/en/deploy-kubernetes/
   - https://github.com/cnieg/helm-charts/tree/master/charts/pulsar
-version: 1.0.0
+maintainers:
+  - name: audig
