--- a/charts/pulsar/templates/function-worker-configmap.yaml
+++ b/charts/pulsar/templates/function-worker-configmap.yaml
@@ -17,28 +17,16 @@
 # under the License.
 #
 
-{{- if .Values.components.bookkeeper }}
+{{- if .Values.components.functions }}
+## function config map
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: "{{ template "pulsar.fullname" . }}-{{ .Values.bookkeeper.component }}"
+  name: "{{ template "pulsar.fullname" . }}-{{ .Values.functions.component }}-config"
   namespace: {{ .Values.namespace }}
   labels:
     {{- include "pulsar.standardLabels" . | nindent 4 }}
-    component: {{ .Values.bookkeeper.component }}
+    component: {{ .Values.functions.component }}
 data:
-  # common config
-  {{- include "pulsar.bookkeeper.config.common" . | nindent 2 }}
-  {{- if .Values.components.autorecovery }}
-  # disable auto recovery on bookies since we will start AutoRecovery in separated pods
-  autoRecoveryDaemonEnabled: "false"
-  {{- end }}
-  # Do not retain journal files as it increase the disk utilization
-  journalMaxBackups: "0"
-  journalDirectories: "/pulsar/data/bookkeeper/journal"
-  PULSAR_PREFIX_journalDirectories: "/pulsar/data/bookkeeper/journal"
-  ledgerDirectories: "/pulsar/data/bookkeeper/ledgers"
-  # TLS config
-  {{- include "pulsar.bookkeeper.config.tls" . | nindent 2 }}
-{{ toYaml .Values.bookkeeper.configData | indent 2 }}
+  pulsarDockerImageName: "{{ .Values.images.functions.repository }}:{{ .Values.images.functions.tag }}"
 {{- end }}
