--- a/charts/pulsar/templates/grafana-ingress.yaml
+++ b/charts/pulsar/templates/grafana-ingress.yaml
@@ -17,25 +17,34 @@
 # under the License.
 #
 
-{{- if or .Values.components.pulsar_manager .Values.extra.pulsar_manager }}
-apiVersion: v1
-kind: Service
+  {{- if .Values.extra.monitoring}}
+  {{- if .Values.grafana.ingress.enabled }}
+apiVersion: extensions/v1beta1
+kind: Ingress
 metadata:
-  name: "{{ template "pulsar.fullname" . }}-{{ .Values.pulsar_manager.component }}"
+  name: "{{ template "pulsar.fullname" . }}-{{ .Values.grafana.component }}"
   namespace: {{ .Values.namespace }}
   labels:
-    {{- include "pulsar.standardLabels" . | nindent 4 }}
-    component: {{ .Values.pulsar_manager.component }}
-  annotations:
-{{ toYaml .Values.pulsar_manager.service.annotations | indent 4 }}
-spec:
-  type: {{ .Values.pulsar_manager.service.type }}
-  ports:
-    - name: server
-      port: {{ .Values.pulsar_manager.port }}
-      protocol: TCP
-  selector:
     app: {{ template "pulsar.name" . }}
+    chart: {{ template "pulsar.chart" . }}
     release: {{ .Release.Name }}
-    component: {{ .Values.pulsar_manager.component }}
+    heritage: {{ .Release.Service }}
+{{- with .Values.grafana.ingress.annotations }}
+  annotations:
+{{ toYaml . | indent 4 }}
 {{- end }}
+spec:
+{{- if .Values.grafana.ingress.tls }}
+  tls:
+{{ toYaml .Values.grafana.ingress.tls | indent 4 }}
+{{- end }}
+  rules:
+    - host: {{ required "Grafana ingress hostname not provided" .Values.grafana.ingress.hostname }}
+      http:
+        paths:
+        - path: {{ .Values.grafana.ingress.path }}
+          backend:
+            serviceName: "{{ template "pulsar.fullname" . }}-{{ .Values.grafana.component }}"
+            servicePort: {{ .Values.grafana.ingress.port }}
+  {{- end }}
+  {{- end }}
