--- a/charts/pulsar/templates/grafana-service.yaml
+++ b/charts/pulsar/templates/grafana-service.yaml
@@ -17,28 +17,27 @@
 # under the License.
 #
 
-{{- if .Values.components.bookkeeper }}
+{{- if or .Values.monitoring.grafana .Values.extra.monitoring }}
 apiVersion: v1
-kind: ConfigMap
+kind: Service
 metadata:
-  name: "{{ template "pulsar.fullname" . }}-{{ .Values.bookkeeper.component }}"
+  name: "{{ template "pulsar.fullname" . }}-{{ .Values.grafana.component }}"
   namespace: {{ .Values.namespace }}
   labels:
     {{- include "pulsar.standardLabels" . | nindent 4 }}
-    component: {{ .Values.bookkeeper.component }}
-data:
-  # common config
-  {{- include "pulsar.bookkeeper.config.common" . | nindent 2 }}
-  {{- if .Values.components.autorecovery }}
-  # disable auto recovery on bookies since we will start AutoRecovery in separated pods
-  autoRecoveryDaemonEnabled: "false"
-  {{- end }}
-  # Do not retain journal files as it increase the disk utilization
-  journalMaxBackups: "0"
-  journalDirectories: "/pulsar/data/bookkeeper/journal"
-  PULSAR_PREFIX_journalDirectories: "/pulsar/data/bookkeeper/journal"
-  ledgerDirectories: "/pulsar/data/bookkeeper/ledgers"
-  # TLS config
-  {{- include "pulsar.bookkeeper.config.tls" . | nindent 2 }}
-{{ toYaml .Values.bookkeeper.configData | indent 2 }}
+    component: {{ .Values.grafana.component }}
+  annotations:
+{{- with .Values.grafana.service.annotations }}
+{{ toYaml . | indent 4 }}
+{{- end }}
+spec:
+  type: {{ .Values.grafana.service.type }}
+  ports:
+    - name: server
+      port: {{ .Values.grafana.port }}
+      protocol: TCP
+  selector:
+    {{- include "pulsar.matchLabels" . | nindent 4 }}
+    component: {{ .Values.grafana.component }}
+  sessionAffinity: None
 {{- end }}
