--- a/charts/pulsar/templates/prometheus-service.yaml
+++ b/charts/pulsar/templates/prometheus-service.yaml
@@ -17,28 +17,24 @@
 # under the License.
 #
 
-{{- if .Values.components.bookkeeper }}
+{{- if or .Values.monitoring.prometheus .Values.extra.monitoring }}
 apiVersion: v1
-kind: ConfigMap
+kind: Service
 metadata:
-  name: "{{ template "pulsar.fullname" . }}-{{ .Values.bookkeeper.component }}"
+  name: "{{ template "pulsar.fullname" . }}-{{ .Values.prometheus.component }}"
   namespace: {{ .Values.namespace }}
   labels:
     {{- include "pulsar.standardLabels" . | nindent 4 }}
-    component: {{ .Values.bookkeeper.component }}
-data:
-  # common config
-  {{- include "pulsar.bookkeeper.config.common" . | nindent 2 }}
-  {{- if .Values.components.autorecovery }}
-  # disable auto recovery on bookies since we will start AutoRecovery in separated pods
-  autoRecoveryDaemonEnabled: "false"
-  {{- end }}
-  # Do not retain journal files as it increase the disk utilization
-  journalMaxBackups: "0"
-  journalDirectories: "/pulsar/data/bookkeeper/journal"
-  PULSAR_PREFIX_journalDirectories: "/pulsar/data/bookkeeper/journal"
-  ledgerDirectories: "/pulsar/data/bookkeeper/ledgers"
-  # TLS config
-  {{- include "pulsar.bookkeeper.config.tls" . | nindent 2 }}
-{{ toYaml .Values.bookkeeper.configData | indent 2 }}
+    component: {{ .Values.prometheus.component }}
+  annotations:
+{{ toYaml .Values.prometheus.service.annotations | indent 4 }}
+spec:
+  clusterIP: None
+  ports:
+    - name: server
+      port: {{ .Values.prometheus.port }}
+  selector:
+    app: {{ template "pulsar.name" . }}
+    release: {{ .Release.Name }}
+    component: {{ .Values.prometheus.component }}
 {{- end }}
