Fix init containers conditions
Signed-off-by: Guillaume Audic <audic.gui@gmail.com>

--- a/charts/pulsar/templates/bookkeeper-statefulset.yaml
+++ b/charts/pulsar/templates/bookkeeper-statefulset.yaml
@@ -91,6 +91,7 @@ spec:
         envFrom:
         - configMapRef:
             name: "{{ template "pulsar.fullname" . }}-{{ .Values.bookkeeper.component }}"
+        {{- if .Values.initContainers.resources }}
         resources:
 {{ toYaml .Values.initContainers.resources | indent 10 }}
         {{- end }}
