--- a/charts/pulsar/templates/broker-statefulset.yaml
+++ b/charts/pulsar/templates/broker-statefulset.yaml
@@ -96,9 +96,9 @@ spec:
             {{- end }}
               echo "pulsar cluster {{ template "pulsar.fullname" . }} isn't initialized yet ... check in 3 seconds ..." && sleep 3;
             done;
-        {{- if .Values.initContainers.resources }}
+        {{- if .Values.broker.initContainers.resources }}
         resources:
-{{ toYaml .Values.initContainers.resources | indent 10 }}
+{{ toYaml .Values.broker.initContainers.resources | indent 10 }}
         {{- end }}
         volumeMounts:
         {{- include "pulsar.broker.certs.volumeMounts" . | nindent 8 }}
